[gd_scene load_steps=8 format=2]

[ext_resource path="res://Prefabs/Items/SandSpear.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Item/sand_spear_held.png" type="Texture" id=2]
[ext_resource path="res://HBoxes/Hitbox.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=3]
resource_name = "Spin"
length = 1.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.35, 0.4, 0.45, 0.5, 0.6, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -8 ), Vector2( -4, -4 ), Vector2( 8, -8 ), Vector2( -12, -12 ), Vector2( -8, 8 ), Vector2( 8, 8 ), Vector2( 8, -8 ), Vector2( 6, -12 ), Vector2( 0, -8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5, 0.6, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -90.0002, 15.0, -135.0, -495.0, -515.0, -450.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpinHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "exit_spin"
} ]
}

[sub_resource type="Animation" id=1]
resource_name = "Stab"
length = 0.3
step = 0.05
tracks/0/type = "method"
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.15 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "exit_stab"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -8 ), Vector2( 24, -8 ), Vector2( 0, -8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("StabHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="CapsuleShape2D" id=2]
radius = 4.06727
height = 9.86549

[sub_resource type="CapsuleShape2D" id=4]
radius = 4.0
height = 40.0

[node name="Item" type="Node2D"]
position = Vector2( 0, -8 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
rotation = -7.85398
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/Spin = SubResource( 3 )
anims/Stab = SubResource( 1 )

[node name="StabHitbox" parent="Sprite" instance=ExtResource( 3 )]
position = Vector2( -3.33786e-05, 9.16667 )
rotation = 1.5708
scale = Vector2( 0.833333, 0.833333 )
collision_mask = 8
damage = 2

[node name="CollisionShape2D" parent="Sprite/StabHitbox" index="0"]
position = Vector2( 28, 0 )
rotation = 1.57079
shape = SubResource( 2 )
disabled = true

[node name="SpinHitbox" parent="Sprite" instance=ExtResource( 3 )]
collision_mask = 8
damage = 3

[node name="CollisionShape2D" parent="Sprite/SpinHitbox" index="0"]
position = Vector2( 0, 16 )
shape = SubResource( 4 )
disabled = true

[node name="SwingMarker" type="Node2D" parent="."]
position = Vector2( 10, 0 )

[editable path="Sprite/StabHitbox"]
[editable path="Sprite/SpinHitbox"]
